# phabricator-etl

./: .gitignore  README.md  pyproject.toml  requirements.txt  stats.py
.github/workflows/: test.yml
phabricator_etl/: stats.py  transforms.py
tests/: test_convert_json_to_string.py  test_convert_json_to_string_list.py  test_lint.py  test_transforms.py  test_utils.py
